# todo

./: .gitignore  .isort.cfg  LICENCE  README.md  pyproject.toml  setup.cfg
deals/: forms.py  models.py  urls.py
deals/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
static_pages/: urls.py
templates/deals/: added.html  task_detail.html  task_list.html
templates/static_pages/: about.html
todo/: calculator.py  calculator_tests.py  sample_test_fixtures.py  settings.py  urls.py  wsgi.py
