[tool.poetry]
name = "todo"
version = "0.1.0"
description = "A small Django-based app needed for testing trials under the Ya.Pr curricilum for back-enders"
authors = ["Your Name <you@example.com>"]
license = "MIT-like?"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
django = "2.2.28"
pillow = "9.3.0"
pytz = "2019.3"
pytils = "0.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"
django-stubs = "^1.16.0"
typing-extensions = "^4.5.0"
ruff = "^0.0.260"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
