[tool.poetry]
name = "todo"
version = "0.1.0"
description = "A small Django-based app needed for testing per setrials under the Ya.Pr curricilum for back-enders"
authors = ["Kir Koov <pogon@ya.ru>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
django = "2.2.28"
pillow = "9.3.0"
pytz = "2019.3"
pytils = "0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
deptry = "^0.8.0"
ruff = "^0.0.261"
ruff-lsp = "^0.0.24"
mypy = "^1.1.1"
toml = "^0.10.2"
isort = "^5.12.0"
django-stubs = "^1.16.0"
typing-extensions = "^4.5.0"

[tool.mypy]
mypy_path = "./todo"
plugins = ["mypy_django_plugin.main"]
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pytils.translit",
    #"some_other_library"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "todo.settings"

[tool.deptry]
ignore_obsolete = [
    "pillow",
    "pytz",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
